--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
+    "react-social-icons": "^6.4.0",
     "three": "^0.157.0"
   },
   "devDependencies": {
