--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/three": "^0.157.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
+    "prettier": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
