--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.4",
     "@react-three/drei": "^9.88.2",
     "@react-three/fiber": "^8.14.5",
     "@types/three": "^0.157.0",
