--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-ease": "^3.0.1",
     "framer-motion": "^10.16.4",
     "framer-motion-3d": "^10.16.4",
+    "gl-noise": "^1.6.1",
     "jotai": "^2.5.0",
     "next": "13.5.4",
     "prettier": "^3.0.3",
@@ -24,7 +25,13 @@
     "react-feather": "^2.0.10",
     "react-icons": "^4.11.0",
     "react-social-icons": "^6.4.0",
-    "three": "^0.157.0"
+    "three": "^0.169.0",
+    "three-custom-shader-material": "^6.0.13"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "devDependencies": {
     "@types/node": "^20",
