updated text + shader

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-three/drei": "^9.88.2",
     "@react-three/fiber": "^8.14.5",
     "@types/three": "^0.157.0",
+    "babel-plugin-glsl": "^1.0.0",
+    "clsx": "^2.1.1",
     "d3-ease": "^3.0.1",
     "framer-motion": "^10.16.4",
     "framer-motion-3d": "^10.16.4",
     "gl-noise": "^1.6.1",
     "jotai": "^2.5.0",
+    "merge": "^2.1.1",
     "next": "13.5.4",
     "prettier": "^3.0.3",
     "react": "^18",
@@ -25,6 +28,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^4.11.0",
     "react-social-icons": "^6.4.0",
+    "tailwind-merge": "^3.2.0",
     "three": "^0.169.0",
     "three-custom-shader-material": "^6.0.13"
   },
