--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jotai": "^2.5.0",
     "merge": "^2.1.1",
     "next": "13.5.4",
+    "ogl": "^1.0.11",
     "prettier": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
