--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gl-noise": "^1.6.1",
     "jotai": "^2.5.0",
     "leva": "^0.10.0",
+    "matter-js": "^0.20.0",
     "merge": "^2.1.1",
     "next": "13.5.4",
     "ogl": "^1.0.11",
