--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.4",
+    "@react-spring/three": "^9.5.5",
     "@react-three/drei": "^9.88.2",
     "@react-three/fiber": "^8.14.5",
     "@types/three": "^0.157.0",
@@ -24,7 +25,7 @@
     "leva": "^0.10.0",
     "matter-js": "^0.20.0",
     "merge": "^2.1.1",
-    "next": "13.5.4",
+    "next": "^13.5.11",
     "ogl": "^1.0.11",
     "prettier": "^3.0.3",
     "react": "^18",
